# ladybug-trading

./: .dockerignore  .env.example  .gitignore  COMPLETE_LAUNCH_GUIDE.md  COMPONENT_INTEGRATION.md  DOCKER_LAUNCH.md  Dockerfile  Dockerfile.frontend  FILES_ALREADY_INSTALLED.md  FINAL_DELIVERY_SUMMARY.md  README.md  YAHOO_FINBERT_GUIDE.md  docker-compose.yml  docker-launch.ps1  free-ladybug.ps1  install.bat  kill-ladybug.ps1  new_generate_test_data.txt  replace_function.py  replace_test_data.py  restart.ps1  run-dev.bat  simple_test_fn.txt  stop-all.bat  verify-installation.ps1
.github/workflows/: ci-cd.yml  node-ci.yml  rust-ci.yml
config/: config.toml
docker/: docker-compose.yml
gui/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: cyberpunk.css  main.tsx
gui/src/components/: Dashboard.tsx  EnhancedChart.tsx  EnhancedTradeAnalysis.tsx  PositionsPnLChart.tsx  ProfitBooking.tsx  TradingModeSelector.tsx
rust-engine/: Cargo.toml  build_error.txt
rust-engine/src/: activity.rs  alpaca.rs  crypto.rs  main.rs  new_generate_fn.txt  news.rs  technical.rs
sentiment-service/: README.md  requirements.txt  sentiment_server.py
