[package]
name = "ladybug-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
toml = "0.8"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4"] }