[package]
name = "ladybug-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rust_decimal = "1.36"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
toml = "0.8"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"  # NEW: For random test data generation
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"